--- a/index.html
+++ b/index.html
@@ -8,29 +8,25 @@
   
   <title>Frontend Mentor | Product preview card component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
-
-  Perfume
-
-  Gabrielle Essence Eau De Parfum
-
-  A floral, solar and voluptuous interpretation composed by Olivier Polge, 
-  Perfumer-Creator for the House of CHANEL.
-
-  $149.99
-  $169.99
-
-  Add to Cart
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+  <div class="container">
+    <img src="images/image-product-desktop.jpg" alt="Product">
+    <div class="sub-container">
+      <h3>PERFUME</h3>
+      <h1>Gabrielle Essence Eau De Parfum</h1>
+      <p>
+        A floral, solar and voluptuous inerpretation composed by Olivieer Polge, Perfumer-Creator for the House of CHANEL.
+      </p>
+      <div class="price-section">
+        <span class="price">$149.99</span>
+        <span class="original-price">$169.99</span>
+      </div>
+      <button class="add-to-cart">
+        <img src="images/icon-cart.svg" alt="Cart Icon">
+        Add to Cart
+      </button>
+    </div>
   </div>
 </body>
 </html>
