adding style but not finishing the mobile version yet.

--- a/index.html
+++ b/index.html
@@ -7,13 +7,23 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | Product preview card component</title>
+  <link rel="stylesheet" href="style.css">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Outfit:wght@100..900&display=swap" rel="stylesheet">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Outfit:wght@100..900&display=swap" rel="stylesheet">
 
 </head>
+
 <body>
   <div class="container">
     <img src="images/image-product-desktop.jpg" alt="Product">
     <div class="sub-container">
-      <h3>PERFUME</h3>
+      <p style="letter-spacing: 7px;">PERFUME</p>
       <h1>Gabrielle Essence Eau De Parfum</h1>
       <p>
         A floral, solar and voluptuous inerpretation composed by Olivieer Polge, Perfumer-Creator for the House of CHANEL.
