--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 <body>
   <div class="container">
     <img src="images/image-product-desktop.jpg" alt="Product">
+    <img src="images/image-product-mobile.jpg" alt="product">
     <div class="sub-container">
       <p style="letter-spacing: 7px;">PERFUME</p>
       <h1>Gabrielle Essence Eau De Parfum</h1>
